# irc-rs

./: Cargo.toml
examples/: binance_ws.rs
src/: lib.rs  main.rs
