[package]
name = "irc-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
bytes = "1"
tokio-native-tls = "0.3.0"
regex = "1"
lazy_static = "1.4.0"
tokio-tungstenite = { version = "*", features = ["native-tls"] }
futures-util = "0.3.23"
futures-channel = "0.3.23"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = "2.2.2"
